--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./styles.css">
   <script src="https://kit.fontawesome.com/5533037503.js" crossorigin="anonymous"></script>
 </head>
 
@@ -54,7 +54,7 @@
       <button type="button" class="btn btn-outline-light btn-lg download-image"> <i class="fa-brands fa-google-play"></i> Download</button>
     </div>
     <div class="col-lg-6">
-      <img  class="title-edit" src="images/iphone6.png" alt="iphone-mockup">
+      <img  class="title-edit" src="./iphone6.png" alt="iphone-mockup">
     </div>
   </div>
 
@@ -97,13 +97,13 @@
 
     <h2><center>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</center></h2>
     <div class="image">
-      <img src="images/dog-img.jpg" alt="dog-profile" >
+      <img src="./dog-img.jpg" alt="dog-profile" >
       <em><center>Pebbles, New York</center> </em>
     </div>
    
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+    <img class="testimonial-image" src="./lady-img.jpg" alt="lady-profile">
     <em>Beverly, Illinois</em> -->
   </div>
   
@@ -111,10 +111,10 @@
 <div class="pressing">
   <!-- Press -->
 <div class="row">
-      <div class="col-lg-3 press"><img src="images/techcrunch.png" alt="tc-logo" width="120em" height="50em"> </div>
-    <div class="col-lg-3 press"><img src="images/tnw.png" alt="tnw-logo"width="120em" height="50em"></div>
-    <div class="col-lg-3 press"><img src="images/bizinsider.png" alt="biz-insider-logo"width="120em" height="50em"></div>
-    <div class="col-lg-3 press"> <img src="images/mashable.png" alt="mashable-logo"width="120em" height="50em"></div>
+      <div class="col-lg-3 press"><img src="./techcrunch.png" alt="tc-logo" width="120em" height="50em"> </div>
+    <div class="col-lg-3 press"><img src="./tnw.png" alt="tnw-logo"width="120em" height="50em"></div>
+    <div class="col-lg-3 press"><img src="./bizinsider.png" alt="biz-insider-logo"width="120em" height="50em"></div>
+    <div class="col-lg-3 press"> <img src="./mashable.png" alt="mashable-logo"width="120em" height="50em"></div>
   </div>
 </div>
 </section>
